add primeiras sessoes

--- a/index.html
+++ b/index.html
@@ -5,15 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ana Paula Morais</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Portfólio Ana Paula Morais</title>
 </head>
 
 <body>
-    <h1>Meu Site</h1>
+    <img class="foto-perfil" src="assets/fotoperfil.jpeg" alt="Foto do Perfil">
+    <h1>Ana Paula Morais</h1>
+    <p>Web Developer</p>
+    <h2>Encontre-me</h2>
+
+    <img src="https://icongr.am/devicon/linkedin-original.svg?size=128&color=currentColor" alt="linkedin" width="15px" height="15px"> <a href="https://www.linkedin.com/in/ana-paula-morais-10998a104/" target="_blank">Linkedin</a>
+
+    <img src="https://icongr.am/devicon/github-original.svg?size=128&color=currentColor" alt="Github" width="15px" height="15px"> <a href="https://github.com/AnaPaula-Morais" target="_blank">Github</a>
+
+    <img src="assets/email.png" alt="E-mail" width="15px" height="15px"> <a href="mailto:ap.almeidapm@gmail.com" target="_blank">E-mail</a>
+
+    <br/>
+
     <h2>Sobre</h2>
-    <p>Olá me chamo Ana Paula e aqui vou compartilhar com vocês minha evolução no mundo da tecnologia.</p>
-    <p>Aqui vou fazer o site do zero</p>
-    <img src="" alt="">
+    <p>
+        Olá, me chamo Ana Paula e estou começando minha jornada na área de tecnologia 👩‍💻. Depois de alguns anos atuando como enfermeira 👩‍⚕️ resolvi mudar de carreira e escolhi a programação. Pesquisando sobre as áreas de front e back end e sobre algumas
+        linguagens de programação, decidi me aprofundar no frontend e começar meus estudos em HTML, CSS e JavaScrip e estou mesmo empolgada e animada para levar isto a diante e fazer do frontend uma realidade diária. Vou construir meu website com html
+        e css melhorando ele com base no aprendizado diário. 🎖️ 🎖️ 🎖️
+    </p>
+
 </body>
 
 </html>
