add menu, importacao de fonte, cor de background

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 </head>
 
 <body>
+    <div class="menu">
+        <a href="" class="menu2">Home</a>
+        <a href="" class="menu2">Sobre</a>
+        <a href="" class="menu2">Projetos</a>
+    </div>
     <img class="foto-perfil" src="assets/fotoperfil.jpeg" alt="Foto do Perfil">
     <h1>Ana Paula Morais</h1>
     <p>Web Developer</p>
-    <h2>Encontre-me</h2>
 
-    <img src="https://icongr.am/devicon/linkedin-original.svg?size=128&color=currentColor" alt="linkedin" width="15px" height="15px"> <a href="https://www.linkedin.com/in/ana-paula-morais-10998a104/" target="_blank">Linkedin</a>
+    <img src="assets/Linkedin.png" alt="linkedin" width="15px" height="15px"> <a href="https://www.linkedin.com/in/ana-paula-morais-10998a104/" target="_blank">Linkedin</a>
 
-    <img src="https://icongr.am/devicon/github-original.svg?size=128&color=currentColor" alt="Github" width="15px" height="15px"> <a href="https://github.com/AnaPaula-Morais" target="_blank">Github</a>
+    <img src="assets/Github.png" alt="Github" width="15px" height="15px"> <a href="https://github.com/AnaPaula-Morais" target="_blank">Github</a>
 
-    <img src="assets/email.png" alt="E-mail" width="15px" height="15px"> <a href="mailto:ap.almeidapm@gmail.com" target="_blank">E-mail</a>
+    <img src="assets/gmail.png" alt="E-mail" width="15px" height="15px"> <a href="mailto:ap.almeidapm@gmail.com" target="_blank">E-mail</a>
 
     <br/>
 
