organizacao e melhoramento do menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -10,30 +10,34 @@
 </head>
 
 <body>
-    <div class="menu">
-        <a href="" class="menu2">Home</a>
-        <a href="" class="menu2">Sobre</a>
-        <a href="" class="menu2">Projetos</a>
+    <nav id="menu-horizontal">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Projetos</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <img class="foto-perfil" src="assets/fotoperfil.jpeg" alt="Foto do Perfil">
+        <h1>Ana Paula Morais</h1>
+        <p>Web Developer</p>
+
+        <img src="assets/Linkedin.png" alt="linkedin" width="15px" height="15px"> <a href="https://www.linkedin.com/in/ana-paula-morais-10998a104/" target="_blank">Linkedin</a>
+
+        <img src="assets/Github.png" alt="Github" width="15px" height="15px"> <a href="https://github.com/AnaPaula-Morais" target="_blank">Github</a>
+
+        <img src="assets/gmail.png" alt="E-mail" width="15px" height="15px"> <a href="mailto:ap.almeidapm@gmail.com" target="_blank">E-mail</a>
+
+        <br/>
+
+        <h2>Sobre</h2>
+        <p>
+            Olá, me chamo Ana Paula e estou começando minha jornada na área de tecnologia 👩‍💻. Depois de alguns anos atuando como enfermeira 👩‍⚕️ resolvi mudar de carreira e escolhi a programação. Pesquisando sobre as áreas de front e back end e sobre algumas
+            linguagens de programação, decidi me aprofundar no frontend e começar meus estudos em HTML, CSS e JavaScrip e estou mesmo empolgada e animada para levar isto a diante e fazer do frontend uma realidade diária. Vou construir meu website com
+            html e css melhorando ele com base no aprendizado diário. 🎖️ 🎖️ 🎖️
+        </p>
     </div>
-    <img class="foto-perfil" src="assets/fotoperfil.jpeg" alt="Foto do Perfil">
-    <h1>Ana Paula Morais</h1>
-    <p>Web Developer</p>
-
-    <img src="assets/Linkedin.png" alt="linkedin" width="15px" height="15px"> <a href="https://www.linkedin.com/in/ana-paula-morais-10998a104/" target="_blank">Linkedin</a>
-
-    <img src="assets/Github.png" alt="Github" width="15px" height="15px"> <a href="https://github.com/AnaPaula-Morais" target="_blank">Github</a>
-
-    <img src="assets/gmail.png" alt="E-mail" width="15px" height="15px"> <a href="mailto:ap.almeidapm@gmail.com" target="_blank">E-mail</a>
-
-    <br/>
-
-    <h2>Sobre</h2>
-    <p>
-        Olá, me chamo Ana Paula e estou começando minha jornada na área de tecnologia 👩‍💻. Depois de alguns anos atuando como enfermeira 👩‍⚕️ resolvi mudar de carreira e escolhi a programação. Pesquisando sobre as áreas de front e back end e sobre algumas
-        linguagens de programação, decidi me aprofundar no frontend e começar meus estudos em HTML, CSS e JavaScrip e estou mesmo empolgada e animada para levar isto a diante e fazer do frontend uma realidade diária. Vou construir meu website com html
-        e css melhorando ele com base no aprendizado diário. 🎖️ 🎖️ 🎖️
-    </p>
-
 </body>
 
 </html>
