melhoramento da sessão sobre

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#">Contato</a></li>
         </ul>
     </nav>
-    <div id="home" class="container">
+    <section id="home" class="container">
         <img class="foto-perfil" src="assets/fotoperfil.jpeg" alt="Foto do Perfil">
         <h1>Ana Paula Morais</h1>
         <p class="sub-titulo">Web Developer</p>
@@ -45,15 +45,15 @@
 
             </ul>
         </nav>
-    </div>
-    <div class="sobre">
+    </section>
+    <section class="sobre">
         <h2 id="sobre">Sobre</h2>
-        <p>
-            Olá, me chamo Ana Paula e estou começando minha jornada na área de tecnologia 👩‍💻. Depois de alguns anos atuando como enfermeira 👩‍⚕️ resolvi mudar de carreira e escolhi a programação. Pesquisando sobre as áreas de front e back end e sobre algumas
-            linguagens de programação, decidi me aprofundar no frontend e começar meus estudos em HTML, CSS e JavaScrip e estou mesmo empolgada e animada para levar isto a diante e fazer do frontend uma realidade diária. Vou construir meu website com
-            html e css melhorando ele com base no aprendizado diário. 🎖️ 🎖️ 🎖️
+
+        <p class="texto-sobre">
+            Olá, me chamo Ana Paula e estou começando minha jornada na área de tecnologia 👩‍💻. <br/><br/> Depois de alguns anos atuando como enfermeira 👩‍⚕️ resolvi mudar de carreira e escolhi a programação. Pesquisando sobre as áreas de front e back
+            end e sobre algumas linguagens de programação, decidi me aprofundar no frontend e começar meus estudos em HTML, CSS e JavaScrip.<br/><br/> Vou construir este website com html e css melhorando-o com base no aprendizado diário. 🎖️ 🎖️ 🎖️
         </p>
-    </div>
+    </section>
 </body>
 
 </html>
