correcao de alguns erros ortograficos na sessao sobre

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <h2 id="sobre">Sobre</h2>
 
         <p class="texto-sobre">
-            Olá, me chamo Ana Paula e estou começando minha jornada na área de tecnologia 👩‍💻. <br/><br/> Depois de alguns anos atuando como enfermeira 👩‍⚕️ resolvi mudar de carreira e escolhi a programação. Pesquisando sobre as áreas de front e back
-            end e sobre algumas linguagens de programação, decidi me aprofundar no frontend e começar meus estudos em HTML, CSS e JavaScrip.<br/><br/> Vou construir este website com html e css melhorando-o com base no aprendizado diário. 🎖️ 🎖️ 🎖️
+            Olá, me chamo Ana Paula e estou começando minha jornada na área de tecnologia 👩‍💻. <br/><br/> Depois de alguns anos atuando como enfermeira 👩‍⚕️ resolvi mudar de carreira e escolhi a programação. Pesquisando sobre as áreas de front e backend
+            e sobre algumas linguagens de programação, decidi me aprofundar no frontend e começar meus estudos em HTML, CSS e JavaScript.<br/><br/> Vou construir este website com html e css melhorando-o com base no aprendizado diário. 🎖️ 🎖️ 🎖️
         </p>
     </section>
 </body>
