add avatar no menu horizontal

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <img class="avatar" src="assets/avatar.jpg" alt="meu avatar">
     <nav id="menu-horizontal">
         <ul>
             <li><a href="#">Home</a></li>
