Troca de foto-perfil por avatar, retirada do avatar do menu horizontal

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <img class="avatar" src="assets/avatar.jpg" alt="meu avatar">
     <nav id="menu-horizontal">
         <ul>
             <li><a href="#">Home</a></li>
@@ -20,7 +19,7 @@
         </ul>
     </nav>
     <section id="home" class="container">
-        <img class="foto-perfil" src="assets/fotoperfil.jpeg" alt="Foto do Perfil">
+        <img class="foto-perfil" src="assets/avatar.jpg" alt="Foto do Perfil">
         <h1>Ana Paula Morais</h1>
         <p class="sub-titulo">Web Developer</p>
         <nav id="menu-vertical">
