--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     <section class="sobre-habilidades">
         <div class="habilidades">
             <h2 class="titulo1">Habilidades</h2>
-            <img src="assets/icons8-html-5-48.png" alt="icons-html">
-            <img src="assets/icons8-css3-48.png" alt="icons-css">
-            <img src="assets/icons8-github-48.png" alt="icons-github"><br/>
-            <img src="assets/icons8-javascript-48.png" alt="icons-javascript">
-            <img src="assets/icons8-git-48.png" alt="icons-git">
+            <img src="assets/icons8-html-5-48.png" alt="icons-html" width="40px" height="40px">
+            <img src="assets/icons8-css3-48.png" alt="icons-css" width="40px" height="40px">
+            <img src="assets/icons8-github-48.png" alt="icons-github" width="40px" height="40px"><br/>
+            <img src="assets/icons8-javascript-48.png" alt="icons-javascript" width="40px" height="40px">
+            <img src="assets/icons8-git-48.png" alt="icons-git" width="40px" height="40px">
 
         </div>
         <div class="texto-sobre">
@@ -61,8 +61,7 @@
 
             <p>
                 Olá, me chamo Ana Paula e estou começando minha jornada na área de tecnologia 👩‍💻. <br/><br/> Depois de alguns anos atuando como enfermeira 👩‍⚕️ resolvi mudar de carreira e escolhi a programação.<br/><br/> Pesquisando sobre as áreas
-                de front e backend e sobre algumas linguagens de programação, decidi me aprofundar no frontend e começar meus estudos em HTML, CSS e JavaScript.<br/><br/> Vou construir este website com html e css melhorando-o com base no aprendizado diário.
-                🎖️ 🎖️ 🎖️
+                de front e backend e sobre algumas linguagens de programação, decidi me aprofundar no frontend.<br/><br/> Vou construir este website com html e css melhorando-o com base no aprendizado diário. 🎖️ 🎖️ 🎖️
             </p>
         </div>
     </section>
