--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style-global.css">
+    <link rel="stylesheet" href="menu-horizontal.css">
+    <link rel="stylesheet" href="section-container.css">
+    <link rel="stylesheet" href="section-sobre.css">
+    <link rel="stylesheet" href="section-habilidades.css" />
     <title>Portfólio Ana Paula Morais</title>
 </head>
 
