Organizacao do menu horizontal usando o display flex

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 </head>
 
 <body>
-    <nav id="menu-horizontal">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#">Projetos</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="menu-horizontal">
+            <ul class="lista-menu-horizontal">
+                <li><a href="#">Home</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#">Projetos</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
     <section id="home" class="container">
         <img class="foto-perfil" src="assets/avatar.jpg" alt="Foto do Perfil">
         <h1>Ana Paula Morais</h1>
