--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="section-container.css">
     <link rel="stylesheet" href="section-sobre.css">
     <link rel="stylesheet" href="section-habilidades.css" />
+    <link rel="stylesheet" href="footer.css">
     <title>Portfólio Ana Paula Morais</title>
 </head>
 
@@ -71,6 +72,10 @@
         </div>
 
     </section>
+    <footer>
+        Ana Paula Morais - 2022
+    </footer>
 </body>
+
 
 </html>
