--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="section-sobre.css">
     <link rel="stylesheet" href="section-habilidades.css" />
     <link rel="stylesheet" href="footer.css">
+    <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
     <title>Portfólio Ana Paula Morais</title>
 </head>
 
